# PrometheeGamma

./: Alternative.py  Criterion.py  HDI_europe.json  MyApp.py  PreferenceFunction.py  PrometheeGamma.py  README.md  Requirements.txt  Schema.py  UnitRow.py  algorithme.md  main_promethee_gamma.py  pyproject.toml  test.py  testTabQuestions
Data/: HDI_europe.csv  Top15_SHA2014.csv  randomDataSet.csv  randomDataSet100.csv  randomDataSet50.csv  test_valueError.csv
Docs/source/: Controllers.DataTabControllers.rst  Controllers.rst  Custom.rst  Models.HelpForParametersTabModels.Range.rst  Models.HelpForParametersTabModels.Search.rst  Models.rst  Resources.ScrollableFrames.rst  Views.ResultTabViews.ResultsVisualisationViews.RankView.rst  Views.ResultTabViews.rst  Views.rst  conf.py  index.rst  modules.rst  promethee_gamma_gui.Controllers.rst  promethee_gamma_gui.Custom.rst  promethee_gamma_gui.Models.HelpForParametersTabModels.Range.rst  promethee_gamma_gui.Models.HelpForParametersTabModels.Search.rst  promethee_gamma_gui.Models.rst  promethee_gamma_gui.Resources.ScrollableFrames.rst  promethee_gamma_gui.Resources.rst  promethee_gamma_gui.Views.HelpForParametersTabViews.rst  (+11 more)
Projects/: Shangaï.prometheeGammaProject  test.prometheeGammaProject
autres/: ScrollableFrame.py  randomDataGenerator.py  test.py  testScrollableFrame.py  testSearch.py
processing_files/: rank.ps
src/: Criterion.py  CriterionColumn.py  MyApp.py  OrthogonalGraph.py  PreferenceFunction.py  PreferenceFunctionWindow.py  PrometheeGamma.py  README.md  ResultsVisualisation.py  Tabular.py  __init__.py  main.py
(+187 files in other folders)
